added support for maxlength inputs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <input id="caret1" class="caretjs"></input><br>
-    <input id="caret2" class="caretjs"></input>
+    <input id="caret2" class="caretjs" maxlength=15></input>
 	<script type="text/javascript" src="caret-js/caret.js"></script>
 	<script>CaretJS.create('caret1');</script>
 	<script>CaretJS.create('caret2');</script>
