create npm package

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Caret.js</title>
 
 	<link rel="copyright" href="copyright.html"/>
-	<link rel="stylesheet" type="text/css" href="caret-js/caret.css"/>
+	<link rel="stylesheet" type="text/css" href="dist/caret.css"/>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
@@ -17,7 +17,7 @@
     <input id="caret1" class="caretjs"></input><br>
     <input id="caret2" class="caretjs" maxlength=15></input>
 
-	<script type="text/javascript" src="caret-js/caret.js"></script>
+	<script type="text/javascript" src="dist/caret.js"></script>
     <script>
         CaretJS.create('caret1');
         CaretJS.create('caret2');
