--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 </head>
 
 <body>
-    <input id="caret1" class="caretjs"></input><br>
-    <input id="caret2" class="caretjs" maxlength=15></input>
+	<div style="width: 100%; text-align: center;">
+		<input id="caret1" class="caretjs" style="font-size: 30px;"></input><br>
+		<input id="caret2" class="caretjs" style="font-size: 30px;" maxlength=15></input><br>
+		<input id="caret3" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;"></input><br>
+	</div>
 
 	<script type="text/javascript" src="dist/caret.js"></script>
     <script>
         CaretJS.create('caret1');
-        CaretJS.create('caret2');
+		CaretJS.create('caret2');
+		CaretJS.create('caret3');
     </script>
 </body>
 </html>
