--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 
 <body>
 	<div style="width: 100%; text-align: center;">
-		<input id="caret1" class="caretjs" style="font-size: 30px;"></input><br>
-		<input id="caret2" class="caretjs" style="font-size: 30px;" maxlength=15></input><br>
-		<input id="caret3" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;"></input><br>
+		<input id="caret1" class="caretjs" style="font-size: 30px;"></input>
+		<br>
+		<input id="caret2" class="caretjs" style="font-size: 30px;" maxlength=15></input>
+		<br>
+		<input id="caret3" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;"></input>
+		<br>
 	</div>
 
 	<script type="text/javascript" src="dist/caret.js"></script>
