behave like regular input (caret only when focused)

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 
 <body>
 	<div style="width: 100%; text-align: center;">
-		<input id="caret1" class="caretjs" style="font-size: 30px;"></input>
+		<input id="caret1" class="caretjs" style="font-size: 30px;" placeholder="caretjs input colored 1"></input>
 		<br>
-		<input id="caret2" class="caretjs" style="font-size: 30px;" maxlength=15></input>
 		<br>
-		<input id="caret3" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;"></input>
+		<input id="caret2" class="caretjs" style="font-size: 30px;" maxlength=15 placeholder="caretjs input colored 2"></input>
 		<br>
+		<br>
+		<input id="caret3" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;" placeholder="caretjs input"></input>
+		<br>
+		<br>
+		<input placeholder="Regular input tag"></input>
+
 	</div>
 
 	<script type="text/javascript" src="dist/caret.js"></script>
