--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
 		<input id="caret3" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;" placeholder="caretjs input"></input>
 		<br>
 		<br>
+		<textarea id="caret4" class="caretjs" style="font-size: 30px; font-family: Comic Sans MS;" placeholder="caretjs input"></textarea>
+		<br>
+		<br>
 		<input placeholder="Regular input tag"></input>
-
+		<br>
+		<br>
+		<textarea placeholder="Regular textarea tag"></textarea>
 	</div>
 
 	<script type="text/javascript" src="dist/caret.js"></script>
@@ -33,6 +38,7 @@
         CaretJS.create('caret1');
 		CaretJS.create('caret2');
 		CaretJS.create('caret3');
+		CaretJS.create('caret4');
     </script>
 </body>
 </html>
